# airbnb-clone-backend

./: README.md  db.sqlite3  dev_note.md  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py
reviews/: models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name.py  0004_alter_amenity_options_room_created_at_and_more.py  0005_room_category.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_rename_profile_photo_user_avatar_and_more.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py  0003_alter_user_name.py
wishlists/: admin.py  models.py
wishlists/migrations/: 0001_initial.py
